# room-booking

./: .gitignore  .rultor.yml  README.md  flake.nix  pyproject.toml  structure.md  template.env  test.py
.github/: CONTRIBUTING.md
.github/workflows/: lint.yaml  test-deploy.yml
app/: config.py  main.py
app/adapters/: auth_in_memory.py  outlook.py
app/api/: app.py  dependencies.py  deps.py
app/api/booking/: bearer_booking_router.py  common_router.py  integration_router.py  outlook_adapter.py  router.py  schemas.py
app/api/booking/api_exceptions/: such_room_does_not_exist_error.py
app/api/iam/: dependencies.py  exceptions.py  router.py  schemas.py
app/domain/: entities.py  exceptions.py  use_cases.py
app/domain/adapters/: outlook.py
app/domain/dependencies/: __init__.py  bookable.py  bookable_rooms.csv  bookings_repo.py  iam_repo.py
app/domain/entities/: __init__.py  booking.py  common.py  iam.py
app/domain/entities/exceptions/: end_time_before_start_time_exception.py
app/domain/entities/time/: time_period.py  time_stamp.py
app/domain/use_cases/: booking.py  iam.py
test/: outlook_bookings_test.py
